# email_service

./: .env.sample  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: celery.py  celery_config.py  routes.py  tasks.py
core/settings/: app.py  development.py  test.py
mail/schemas/: __init__.py  send_email.py
mail/tasks/: __init__.py  mail_request.py
mail/tests/: test_get_status.py  test_mail_request_task.py  test_send_email.py
mail/views/: mail.py  routes.py
utils/: __init__.py  create_celery.py  get_task_info.py  mailgun_mail_request.py  sendgrid_mail_request.py
