[tool.poetry]
name = "email-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "email_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.88.0"}
uvicorn = "^0.20.0"
sendgrid = "^6.9.7"
loguru = "^0.6.0"
ipython = "^8.8.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
redis = "^4.4.0"
celery = "4.4.7"
requests = "^2.28.1"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
